{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 14,
  "lineage": "700fd48e-a90b-14f2-104c-af6b53838ad4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "desafio-terraform-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01de8ddb33de7a3d3",
            "arn": "arn:aws:ec2:us-east-1:338942732676:instance/i-05dca7690ebf0e27f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05dca7690ebf0e27f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "desafio-terraform-aws-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a05f0e43a4700d39",
            "private_dns": "ip-10-0-1-152.ec2.internal",
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-52-90-90-200.compute-1.amazonaws.com",
            "public_ip": "52.90.90.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1b39eb4b4fd86a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0633f3bf88d40fe44",
            "tags": {
              "Name": "desafio-terraform-instance"
            },
            "tags_all": {
              "Name": "desafio-terraform-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f3576e4f187a67d6"
            ]
          },
          "dependencies": [
            "aws_key_pair.desafio-terraform-aws-pair",
            "aws_security_group.ssh-allowed",
            "aws_subnet.desafio-terraform-subnet-1",
            "aws_vpc.desafio-terraform-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "desafio-terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338942732676:internet-gateway/igw-02fbffaddc0fbe3e2",
            "id": "igw-02fbffaddc0fbe3e2",
            "owner_id": "338942732676",
            "tags": {
              "Name": "desafio-terraform-igw"
            },
            "tags_all": {
              "Name": "desafio-terraform-igw"
            },
            "vpc_id": "vpc-0334758ed4ffc40c3"
          },
          "dependencies": [
            "aws_vpc.desafio-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "desafio-terraform-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338942732676:route-table/rtb-0e84c44249b43669b",
            "id": "rtb-0e84c44249b43669b",
            "owner_id": "338942732676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fbffaddc0fbe3e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "desafio-terraform-crt"
            },
            "tags_all": {
              "Name": "desafio-terraform-crt"
            },
            "vpc_id": "vpc-0334758ed4ffc40c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.desafio-terraform-igw",
            "aws_vpc.desafio-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "desafio-terraform-ctra-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae888eb8cf90df24",
            "route_table_id": "rtb-0e84c44249b43669b",
            "subnet_id": "subnet-0633f3bf88d40fe44"
          },
          "dependencies": [
            "aws_internet_gateway.desafio-terraform-igw",
            "aws_route_table.desafio-terraform-crt",
            "aws_subnet.desafio-terraform-subnet-1",
            "aws_vpc.desafio-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338942732676:security-group/sg-0ef1cee328bfa49aa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef1cee328bfa49aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3334,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3334
              }
            ],
            "name": "terraform-20210605191459533700000001",
            "name_prefix": "terraform-",
            "owner_id": "338942732676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-27a10c5a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338942732676:security-group/sg-0f3576e4f187a67d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3576e4f187a67d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210605183926999400000001",
            "name_prefix": "terraform-",
            "owner_id": "338942732676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "tags_all": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0334758ed4ffc40c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.desafio-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "desafio-terraform-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338942732676:subnet/subnet-0633f3bf88d40fe44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0633f3bf88d40fe44",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "338942732676",
            "tags": {
              "Name": "desafio-terraform-subnet-1"
            },
            "tags_all": {
              "Name": "desafio-terraform-subnet-1"
            },
            "vpc_id": "vpc-0334758ed4ffc40c3"
          },
          "dependencies": [
            "aws_vpc.desafio-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "desafio-terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338942732676:vpc/vpc-0334758ed4ffc40c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0360e62013c0c3a",
            "default_route_table_id": "rtb-09a86e409f71c3b86",
            "default_security_group_id": "sg-0d82ec2a10fbe42e2",
            "dhcp_options_id": "dopt-b62769cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0334758ed4ffc40c3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a86e409f71c3b86",
            "owner_id": "338942732676",
            "tags": {
              "Name": "desafio-terraform-vpc"
            },
            "tags_all": {
              "Name": "desafio-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}